--- a/LaMiaPizzeria/LaMiaPizzeria.csproj
+++ b/LaMiaPizzeria/LaMiaPizzeria.csproj
@@ -6,4 +6,19 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="wwwroot\Nuova cartella1\**" />
+    <Compile Remove="wwwroot\Nuova cartella2\**" />
+    <Compile Remove="wwwroot\Nuova cartella\**" />
+    <Content Remove="wwwroot\Nuova cartella1\**" />
+    <Content Remove="wwwroot\Nuova cartella2\**" />
+    <Content Remove="wwwroot\Nuova cartella\**" />
+    <EmbeddedResource Remove="wwwroot\Nuova cartella1\**" />
+    <EmbeddedResource Remove="wwwroot\Nuova cartella2\**" />
+    <EmbeddedResource Remove="wwwroot\Nuova cartella\**" />
+    <None Remove="wwwroot\Nuova cartella1\**" />
+    <None Remove="wwwroot\Nuova cartella2\**" />
+    <None Remove="wwwroot\Nuova cartella\**" />
+  </ItemGroup>
+
 </Project>
